force-app/main/default/objects/GDPR_Masking__c/GDPR_Masking__c.object-meta.xml
<CustomObject>
    <label>GDPR Masking</label>
    <nameField>
        <displayFormat>GD-{0000}</displayFormat>
        <label>GDPR Data Subject Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GDPR Maskings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>