force-app/main/default/objects/GDPR_Masking__c/fields/Deleted_Ids__c.field-meta.xml
<CustomField>
    <fullName>Deleted_Ids__c</fullName>
    <description>List of deleted record Ids stored as comma separated.</description>
    <label>Deleted Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>