force-app/main/default/objects/GDPR_Masking__c/fields/ECN__c.field-meta.xml
<CustomField>
    <fullName>ECN__c</fullName>
    <label>ECN</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>