force-app/main/default/objects/GDPR_Masking__c/fields/GDPR_status__c.field-meta.xml
<CustomField>
    <fullName>GDPR_status__c</fullName>
    <description>GDPR Status of ECN</description>
    <label>GDPR status</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>