force-app/main/default/objects/GDPR_Masking__c/fields/Masked_Ids__c.field-meta.xml
<CustomField>
    <fullName>Masked_Ids__c</fullName>
    <description>List of masked record Ids stored as comma separated.</description>
    <label>Masked Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>